Overflow Fix

--- a/public/css/sass/landing.sass
+++ b/public/css/sass/landing.sass
@@ -2,6 +2,9 @@ body, html
   z-index: 1
   margin: 0
   padding: 0
+  width: 100vw
+  height: 100vh
+  overflow: hidden
 
 .background
   width: 100vw
